making small adjustments to uberstyle.css to try to change the layout issues I'm having with .info.container . Its not the right size, and every time I try to adjust it the text moves further to the left.

--- a/css/uberstyle.css
+++ b/css/uberstyle.css
@@ -32,9 +32,9 @@ a {
 
 .info-container {
   margin-top: 2%;
-  margin-left: 10px;
+  margin-left: 30px;
   text-align: justify;
-  width: 280px;
+  width: 310px;
   font-size: 0px;
 }
 
